<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/llmain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="20dp"
            android:text="@string/txt" />

        <Button
            android:id="@+id/btn_1"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btn_2"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btn_3"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn3"
            android:onClick="clickHandler"/>

        <Button
            android:id="@+id/btn_4"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btn_5"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btn_6"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btn_7"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp" />

        <Button
            android:id="@+id/btn_8"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:layout_gravity="bottom|center_horizontal" />

        <TextView
            android:id="@+id/txtv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:textSize="20dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>